--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,7 +3,7 @@
      <ion-refresher-content></ion-refresher-content>
    </ion-refresher>
    <ion-header  class="ion-no-border ">
-    <ion-toolbar >    
+    <ion-toolbar >
           <img alt="logo" class="img-pad"  id="header_logo" height="40" slot="start" src="assets/logo-bg.png">
           <ion-icon slot="end" class="img-pad icon-notif" name="notifications-outline"></ion-icon>
     </ion-toolbar>
@@ -27,9 +27,9 @@
     <div class="bottles-img"><img height="30"  src="assets/bottle-icon.png"> <b>{{bonuses_boutles}}</b> бутелів <ion-icon name="alert-circle-outline" (click)="openmyBottModal()"></ion-icon></div>
     <div class="bottles-img"><ion-icon name="water-outline"></ion-icon> <b>{{bonuses_liters}}</b> літрів <ion-icon name="alert-circle-outline" (click)="openmyLitModal()"></ion-icon></div>
     </div>
-    
+
     <h6 class="ion-text-center">До наступного бонусу</h6>
-  
+
     <div class="bottles">
 <div class="bottles-svg">
 <svg [attr.class]="svg_class" viewbox="0 0 33.83098862 33.83098862" width="150" height="150" xmlns="http://www.w3.org/2000/svg">
@@ -156,7 +156,7 @@
   <ion-card-header *ngIf="home_text_title != false">
     <ion-card-title>{{ home_text_title }}</ion-card-title>
   </ion-card-header>
-  <ion-card-content [innerHTML]='home_text'>
+  <ion-card-content class="home_text" [innerHTML]='home_text'>
   </ion-card-content>
 </ion-card>
 
@@ -169,15 +169,14 @@
   <ng-template>
     <ion-header>
       <ion-toolbar>
-        <ion-title>Бонусні бутелі</ion-title>
+        <ion-title>{{modal_bb_title}}</ion-title>
         <ion-buttons slot="start">
           <ion-button (click)="closemyBottModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
         </ion-buttons>
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding ion-align-items-center" >
-      <p>Отримуй бонусний бутель за кожні 10 замовлених бутелів</p>
-      <p>Як тільки ти назбираєш бонусні бутлі, у тебе зявиться можливість замовити бонус бутель всього за 1 копійку</p>
+      <div [innerHTML]="modal_bb_content"></div>
     </ion-content>
   </ng-template>
 </ion-modal>
@@ -185,15 +184,14 @@
   <ng-template>
     <ion-header>
       <ion-toolbar>
-        <ion-title>Бонусні літри</ion-title>
+        <ion-title>{{modal_bl_title}}Бонусні літри</ion-title>
         <ion-buttons slot="start">
           <ion-button (click)="closemyLitModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
         </ion-buttons>
       </ion-toolbar>
     </ion-header>
-    <ion-content class="ion-padding ion-align-items-center" >
-      <p>Отримуй бонусний літр за кожні 10 налитих літрів у магазині</p>
-      <p>Літри можна обміняти при накопиченні 10 бонусних літрів</p>
+    <ion-content  class="ion-padding ion-align-items-center" >
+      <div [innerHTML]="modal_bl_content"></div>
     </ion-content>
   </ng-template>
 </ion-modal>
