--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -58,7 +58,7 @@
 <div *ngIf="is_auto_category == true">
   <ion-segment [(ngModel)]="selectedCategory" value="default" [scrollable]="true">
     <ion-segment-button *ngFor="let category of categories" (click)="loadCategory(category.category_id)" value="category-{{ category.category_id }}">
-      <ion-label><div *ngIf="category.icon" class="cat-icon">{{category.icon}}</div> {{ category.name }}</ion-label>
+      <ion-label><div><div *ngIf="category.icon" class="cat-icon" [innerHTML]="category.icon">{{category.icon}}</div> {{ category.name }}</div></ion-label>
     </ion-segment-button>
   </ion-segment>
 
