--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -23,8 +23,8 @@
     color: black;
     margin-bottom: 10px;
     text-transform: math-auto;
-   
-    
+
+
 }
 .price {
     color: #3880ff;
@@ -154,4 +154,49 @@ ion-segment-button {
     display: flex;
     align-items: center;
     width: max-content;
+}
+.notify-icon {
+    justify-content: end;
+    display: flex;
+    position: relative;
+}
+.notify-icon span.notify-counter {
+    position: absolute;
+    top: 0px;
+    background: #3880ff;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    color: #fff;
+    right: 15px;
+    font-size: 12px;
+    text-align: center;
+}
+ion-note.empty-history-push {
+    text-align: center;
+    margin: 20px auto;
+    display: block;
+}
+.push-item {
+    display: flex;
+    align-items: center;
+}
+.push-item .caption {
+  width: 85%;
+}
+.push-item .caption h4 {
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+.push-item .icon {
+    width: 15%;
+}
+.push-item .icon ion-icon {
+    font-size: 2rem;
+}
+.color-primary{
+  color:#3880ff
+}
+.color-success{
+  color:#2dd36f
 }
