--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,4 +1,8 @@
 <ion-content [fullscreen]="true">
+  <ion-header  class="ion-no-border ">
+    <ion-toolbar class="new-background-color">
+      </ion-toolbar>
+  </ion-header>
   <ion-icon class="close-auth" (click)="closeAuth()" name="close-outline"></ion-icon>
   <ion-grid>
     <ion-row class="img-logo">
