--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -190,7 +190,7 @@
   <ng-template>
     <ion-header>
       <ion-toolbar>
-        <ion-title>{{modal_bl_title}}Бонусні літри</ion-title>
+        <ion-title>{{modal_bl_title}}</ion-title>
         <ion-buttons slot="start">
           <ion-button (click)="closemyLitModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
         </ion-buttons>
