modal close fix

--- a/src/app/account-address/account-address.page.html
+++ b/src/app/account-address/account-address.page.html
@@ -33,7 +33,7 @@
   </ion-list>
 
 
-  <ion-modal [isOpen]="addressModal">
+  <ion-modal [isOpen]="addressModal" [canDismiss]="!addressModal">
       <ng-template>
         <ion-header>
           <ion-toolbar>
