--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -30,7 +30,7 @@
   </form>
 </div>
 
-<ion-modal [isOpen]="openValidate">
+<ion-modal [isOpen]="openValidate" [canDismiss]="!openValidate">
     <ng-template>
       <ion-header>
         <ion-toolbar>
