--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon name="water-outline"></ion-icon>
+      <ion-icon name="car-sport-outline"></ion-icon>
       <ion-label>Доставка</ion-label>
     </ion-tab-button>
 
