--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -22,6 +22,8 @@
       <ion-label><span class="icon"><ion-icon name="navigate-outline"></ion-icon></span> Адреси доставки</ion-label></ion-item>
     <ion-item (click)="openOrdersPage()">
       <ion-label><span class="icon"><ion-icon name="cart-outline"></ion-icon></span> Мої замовлення</ion-label></ion-item>
+    <ion-item (click)="openMyBalance()">
+              <ion-label><span class="icon"><ion-icon name="wallet-outline"></ion-icon></span> Мій баланс</ion-label></ion-item>  
     <ion-item *ngIf="bonus_history_status == true" (click)="toggleBonusesHistory(true)">
       <ion-label><span class="icon"><ion-icon name="gift-outline"></ion-icon></span> Історія бонусів</ion-label></ion-item>
     <ion-item (click)="getQr()">
