--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,14 +1,12 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title><ion-icon name="storefront-outline"></ion-icon> Магазин</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content [fullscreen]="true" class="ion-padding">
 <div class="content" *ngIf="show_empty != true">
-  <div class="bonuses">
-    <ion-card>
-    <ion-card-content>
-      <h4>Ви накопичили: <b>{{count_liters}}</b> бонусних літрів</h4>
-     <ion-progress-bar [value]="progress_ll"></ion-progress-bar>
-     <small>*до наступного бонусного літру потрібно придбати <b>{{to_next_l}}</b> літрів очищеної води</small>
-    </ion-card-content>
-  </ion-card>
-  </div>
+  
   <div class="bottles">
     <div class="bottles-count">
     <div class="bottles-img"><ion-icon name="water-outline"></ion-icon> <b>{{count_liters}}</b> літрів <ion-icon name="alert-circle-outline" (click)="openmyLitModal()"></ion-icon></div>
@@ -24,8 +22,8 @@
 
   <div *ngIf="button_scanner_status == true" class="scanner">
     <!--[disabled]="!isSupported" -->
-    <ion-button (click)="scanSingleBarcode()" expand="block">Відсканувати QR <ion-icon name="cart-outline"></ion-icon></ion-button>
-    <ion-button *ngIf="description_how_to != ''" id="scan-trigger" expand="block" fill="outline" size="small">Докладніше <ion-icon name="help-outline"></ion-icon></ion-button>
+    <ion-button shape="round" (click)="scanSingleBarcode()" expand="block">Відсканувати QR <ion-icon name="cart-outline"></ion-icon></ion-button>
+    <ion-button shape="round" *ngIf="description_how_to != ''" id="scan-trigger" expand="block" fill="outline" size="small">Докладніше <ion-icon name="help-outline"></ion-icon></ion-button>
 <ion-popover trigger="scan-trigger" triggerAction="click" *ngIf="description_how_to != ''">
   <ng-template>
     <ion-content class="ion-padding">{{description_how_to}}</ion-content>
@@ -36,13 +34,14 @@
 
   <div class="qr-code">
   <ion-card class="ion-text-center">
-    <img src="{{qrcode}}">
     <ion-card-header class="ion-text-center">
       <ion-card-subtitle>Покажіть цей код нашому менеджеру</ion-card-subtitle>
     </ion-card-header>
+    <img src="{{qrcode}}">
+    
   </ion-card>
   </div>
-
+  
   <div class="text-shop" *ngIf="text_text != false">
   <ion-card>
     <ion-card-header *ngIf="text_title != false" class="ion-text-center">
@@ -53,6 +52,68 @@
   </ion-card>
   </div>
 </div>
+<ion-col size="12">
+  <ion-card class="product-items">
+      <ion-row class="product-item">
+        <ion-col size="4">
+          <ion-card-content>
+          <div class="image">
+            <img src="https://skywater.com.ua/assets/theme/img/cat-icons/icon-water.png" alt=""  />
+          </div>
+        </ion-card-content>
+        </ion-col>
+        <ion-col size="8">
+          <ion-card-content>
+          <ion-card-title  class="products-title ion-text-center">Вода очищена</ion-card-title>
+          <ion-card-subtitle class="price ion-text-center ion-padding">1.3 грн/л </ion-card-subtitle>      
+        </ion-card-content>         
+        </ion-col>
+        <ion-card-content>Високоякісна очищена вода без запаху і домішок, завдяки системі зворотнього осмосу забезпечує найбільший рівень очищення води від шкідливих домішок та є найбільш безпечним для здоров'я людини, не утворює накипу, рекомендована для безпосереднього споживання, приготування їжі та напоїв.
+        </ion-card-content>
+      </ion-row>
+
+  </ion-card>
+  <ion-card class="product-items">
+    <ion-row class="product-item">
+      <ion-col size="4">
+        <ion-card-content>
+        <div class="image">
+          <img src="https://skywater.com.ua/assets/theme/img/cat-icons/icon-water.png" alt=""  />
+        </div>
+      </ion-card-content>
+      </ion-col>
+      <ion-col size="8">
+        <ion-card-content>
+        <ion-card-title  class="products-title ion-text-center">Вода насичена іонами срібла</ion-card-title>
+        <ion-card-subtitle class="price ion-text-center ion-padding">1.5 грн/л </ion-card-subtitle>      
+      </ion-card-content>         
+      </ion-col>
+      <ion-card-content>Воду насичену іонами срібла корисно пити для підтримання сполук срібла в організмі. Срібна вода не втрачає свої властивості при нагріванні. Рекомендована для безпосереднього споживання, приготування їжі та напоїв.
+      </ion-card-content>
+    </ion-row>
+
+</ion-card>
+<ion-card class="product-items">
+  <ion-row class="product-item">
+    <ion-col size="4">
+      <ion-card-content>
+      <div class="image">
+        <img src="https://skywater.com.ua/assets/theme/img/cat-icons/icon-water.png" alt=""  />
+      </div>
+    </ion-card-content>
+    </ion-col>
+    <ion-col size="8">
+      <ion-card-content>
+      <ion-card-title  class="products-title ion-text-center">Вода мінералізована</ion-card-title>
+      <ion-card-subtitle class="price ion-text-center ion-padding">1.5 грн/л </ion-card-subtitle>      
+    </ion-card-content>         
+    </ion-col>
+    <ion-card-content>Вода мінералізована має збалансований склад мінералів, фізіологічно повноцінна, ідеально підходить для щоденного споживання, має збалансований фізико-хімічний склад, не утворює накипу. Рекомендована для безпосереднього споживання, приготування їжі та напоїв.
+    </ion-card-content>
+  </ion-row>
+
+</ion-card>
+</ion-col>
   <ion-note *ngIf="show_empty == true" class="ion-text-center ion-justify-content-center">
 Будь ласка, увійдіть в свій особистий кабінет або зареєструйтесь.
   </ion-note>
