--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -56,13 +56,15 @@ ion-card-title.products-title {
 }
 span.bonus-text {
     position: absolute;
-    top: 33%;
-    left: 31%;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: nowrap;
-    align-items: center;
+      top: 33%;
+      left: 0px;
+      width: 100%;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      flex-wrap: nowrap;
+      align-items: center;
 }
 .bottles-svg {
     position: relative;
@@ -199,4 +201,12 @@ ion-note.empty-history-push {
 }
 .color-success{
   color:#2dd36f
+}
+span.bonus-text.bonus-liter {
+    left: 0px;
+    width: 100%;
+    text-align: center;
+}
+span.bonus-text.bonus-liter b {
+    font-size: 23px !important;
 }
