--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,7 +6,7 @@
 
 <ion-content [fullscreen]="true" class="ion-padding">
 <div class="content" *ngIf="show_empty != true">
-  
+
   <div class="bottles">
     <div class="bottles-count">
     <div class="bottles-img"><ion-icon name="water-outline"></ion-icon> <b>{{count_liters}}</b> літрів <ion-icon name="alert-circle-outline" (click)="openmyLitModal()"></ion-icon></div>
@@ -16,7 +16,7 @@
 <circle class="circle-chart__background" stroke="#fff" stroke-width="30" fill="none" cx="75" cy="75" r="60" />
 <circle id="progress-line" class="circle-chart__circle" stroke="#3880ff" stroke-width="30" [attr.stroke-dasharray]="progress_l" stroke-linecap="round" fill="none" cx="75" cy="75" r="60" />
 </svg>
-<span class="bonus-text"><b>{{to_next_bonus_liter}}/100</b><small>літрів</small></span>
+<span class="bonus-text"><b>{{to_next_bonus_liter}}/{{bonus_step_l}}</b><small>літрів</small></span>
 </div>
 </div>
 
@@ -38,10 +38,10 @@
       <ion-card-subtitle>Покажіть цей код нашому менеджеру</ion-card-subtitle>
     </ion-card-header>
     <img src="{{qrcode}}">
-    
+
   </ion-card>
   </div>
-  
+
   <div class="text-shop" *ngIf="text_text != false">
   <ion-card>
     <ion-card-header *ngIf="text_title != false" class="ion-text-center">
@@ -52,67 +52,25 @@
   </ion-card>
   </div>
 </div>
-<ion-col size="12">
-  <ion-card class="product-items">
+<ion-col size="12" *ngIf="prices != ''">
+  <ion-card *ngFor="let item of prices" class="product-items">
       <ion-row class="product-item">
         <ion-col size="4">
           <ion-card-content>
           <div class="image">
-            <img src="https://skywater.com.ua/assets/theme/img/cat-icons/icon-water.png" alt=""  />
+            <img src="{{ item.image }}" alt="{{ item.title }}"  />
           </div>
         </ion-card-content>
         </ion-col>
         <ion-col size="8">
           <ion-card-content>
-          <ion-card-title  class="products-title ion-text-center">Вода очищена</ion-card-title>
-          <ion-card-subtitle class="price ion-text-center ion-padding">1.3 грн/л </ion-card-subtitle>      
-        </ion-card-content>         
-        </ion-col>
-        <ion-card-content>Високоякісна очищена вода без запаху і домішок, завдяки системі зворотнього осмосу забезпечує найбільший рівень очищення води від шкідливих домішок та є найбільш безпечним для здоров'я людини, не утворює накипу, рекомендована для безпосереднього споживання, приготування їжі та напоїв.
+          <ion-card-title  class="products-title ion-text-center">{{ item.title }}</ion-card-title>
+          <ion-card-subtitle class="price ion-text-center ion-padding">{{ item.price }}</ion-card-subtitle>
         </ion-card-content>
+        </ion-col>
+        <ion-card-content>{{ item.description }}</ion-card-content>
       </ion-row>
-
   </ion-card>
-  <ion-card class="product-items">
-    <ion-row class="product-item">
-      <ion-col size="4">
-        <ion-card-content>
-        <div class="image">
-          <img src="https://skywater.com.ua/assets/theme/img/cat-icons/icon-water.png" alt=""  />
-        </div>
-      </ion-card-content>
-      </ion-col>
-      <ion-col size="8">
-        <ion-card-content>
-        <ion-card-title  class="products-title ion-text-center">Вода насичена іонами срібла</ion-card-title>
-        <ion-card-subtitle class="price ion-text-center ion-padding">1.5 грн/л </ion-card-subtitle>      
-      </ion-card-content>         
-      </ion-col>
-      <ion-card-content>Воду насичену іонами срібла корисно пити для підтримання сполук срібла в організмі. Срібна вода не втрачає свої властивості при нагріванні. Рекомендована для безпосереднього споживання, приготування їжі та напоїв.
-      </ion-card-content>
-    </ion-row>
-
-</ion-card>
-<ion-card class="product-items">
-  <ion-row class="product-item">
-    <ion-col size="4">
-      <ion-card-content>
-      <div class="image">
-        <img src="https://skywater.com.ua/assets/theme/img/cat-icons/icon-water.png" alt=""  />
-      </div>
-    </ion-card-content>
-    </ion-col>
-    <ion-col size="8">
-      <ion-card-content>
-      <ion-card-title  class="products-title ion-text-center">Вода мінералізована</ion-card-title>
-      <ion-card-subtitle class="price ion-text-center ion-padding">1.5 грн/л </ion-card-subtitle>      
-    </ion-card-content>         
-    </ion-col>
-    <ion-card-content>Вода мінералізована має збалансований склад мінералів, фізіологічно повноцінна, ідеально підходить для щоденного споживання, має збалансований фізико-хімічний склад, не утворює накипу. Рекомендована для безпосереднього споживання, приготування їжі та напоїв.
-    </ion-card-content>
-  </ion-row>
-
-</ion-card>
 </ion-col>
   <ion-note *ngIf="show_empty == true" class="ion-text-center ion-justify-content-center">
 Будь ласка, увійдіть в свій особистий кабінет або зареєструйтесь.
