--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -210,3 +210,18 @@ span.bonus-text.bonus-liter {
 span.bonus-text.bonus-liter b {
     font-size: 23px !important;
 }
+.my-balance {
+    background: #3880ff;
+    padding: 15px;
+    border-radius: 24px;
+    text-align: center;
+    color: #fff;
+}
+.balance-item.with-image img {
+    width: 20px;
+}
+.balance-item.with-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
