--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -63,9 +63,9 @@
         </ion-card-content>
         </ion-col>
         <ion-col size="9">
-          <ion-card-content>
-          <ion-card-title  class="products-title ion-text-center">{{ item.title }}</ion-card-title>
-          <ion-card-subtitle class="price ion-text-center ion-padding">{{ item.price }}</ion-card-subtitle>
+          <ion-card-content class="ion-no-padding">
+          <ion-card-title  class="products-title ion-text-center ion-padding-top">{{ item.title }}</ion-card-title>
+          <ion-card-subtitle class="price ion-text-center ion-padding-top">{{ item.price }}</ion-card-subtitle>
         </ion-card-content>
         </ion-col>
         <ion-card-content>{{ item.description }}</ion-card-content>
