--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -12,6 +12,9 @@ ion-card.product-item ion-card-title {
     display: flex;
     overflow: hidden;
 }
+.products-title {
+    font-size: 16px;
+}
 ion-card.product-items {
     box-shadow: none;
     border-radius: 10px;
