--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -48,7 +48,7 @@
         <ion-button color="primary" (click)="validateCode();" expand="full" >Підтвердити</ion-button>
 
         <br>
-        <small class="ion-text-center">*Якщо повідомлення не прийшло протягом 60 секунд, натисніть кнопку:</small>
+        <small class="ion-text-center">*Якщо повідомлення не прийшло протягом <span class="timer">60</span> секунд, натисніть кнопку:</small>
         <div class="re-send">
           <ion-button size="small" (click)="resendCodeValidation();" fill="outline">Відправити повторно</ion-button>
         </div>
