--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -22,14 +22,15 @@
 
   <div *ngIf="button_scanner_status == true" class="scanner">
     <!--[disabled]="!isSupported" -->
-    <ion-button shape="round" (click)="scanSingleBarcode()" expand="block">Відсканувати QR <ion-icon name="cart-outline"></ion-icon></ion-button>
+    <ion-button shape="round" (click)="scanTestTwo()" expand="block">Відсканувати QR <ion-icon name="cart-outline"></ion-icon></ion-button>
     <ion-button shape="round" *ngIf="description_how_to != ''" id="scan-trigger" expand="block" fill="outline" size="small">Докладніше <ion-icon name="help-outline"></ion-icon></ion-button>
 <ion-popover trigger="scan-trigger" triggerAction="click" *ngIf="description_how_to != ''">
   <ng-template>
     <ion-content class="ion-padding">{{description_how_to}}</ion-content>
   </ng-template>
 </ion-popover>
-    <p *ngIf="!isSupported" class="err-notice">Ваш пристрій не підтримує сканер QR коду</p>
+    <p *ngIf="isSupported === false" class="err-notice">Ваш пристрій не підтримує сканер QR коду</p>
+	
   </div>
 
   <div class="qr-code">
@@ -89,5 +90,10 @@
         <div [innerHTML]="modal_bl_content"></div>
       </ion-content>
     </ng-template>
-  </ion-modal>
+  </ion-modal> 
 </ion-content>
+<div id="scanner-overlay" class="scanner-overlay hidden">
+  <div class="scanner-frame">
+    <div class="scanner-line"></div>
+  </div>
+</div>
