--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar *ngIf="customer_id != 0">
     <ion-title>{{ customer_name }}</ion-title>
     <ion-buttons slot="end">
-    <ion-button fill="solid" (click)="logout()" shape="round"  size="small" color="primary">Вийти
+    <ion-button fill="solid" (click)="logout()" shape="round"  size="small" color="primary">Вийти &nbsp;&nbsp;
 <ion-icon name="log-out-outline" solt="end"></ion-icon>
     </ion-button>
   </ion-buttons>
