--- a/src/app/tab5/tab5.page.scss
+++ b/src/app/tab5/tab5.page.scss
@@ -160,3 +160,8 @@ ion-label.address-line.obmin .radio-wrapper {
     color: #3880ff;
     margin-top: 3px;
 }
+
+.arrow-slide ion-icon {
+    margin: 0px;
+    color: #F44336;
+}
